# blitzi

./: .gitignore  BLITZID.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  flake.nix
.github/workflows/: build.yml
examples/: blitzid_client.py
src/: lib.rs
