[package]
name = "blitzi"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "elsirion" ]
description = "Easy to use Bitcoin Lighning client that uses Fedimint as its backend."
keywords = ["Bitcoin", "Lightning", "Fedimint"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
fedimint-bip39 = "0.9.0"
fedimint-core = "0.9.0"
fedimint-client = "0.9"
fedimint-mint-client = "0.9"
fedimint-ln-client = "0.9.0"
fedimint-meta-client = "0.9.0"
fedimint-rocksdb = "0.9.0"
futures-lite = "2.6.1"
lightning-invoice = "0.33.2"
xdg = "3"
tokio = "1.48.0"

[profile.dev.package]
tikv-jemalloc-sys = { opt-level = 3 }